[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24" # Make sure to use a compatible version
futures = "0.3" # Required for using futures-related utilities
