[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
strum_macros = "0.26.4"
strum = "0.26.3"
rand = "0.8.5"
